--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "html-webpack-plugin": "^5.6.3",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "prettier": "^3.2.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
